<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >
		<!--  View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/change_password_title"
            android:textSize="25dip"
            android:textStyle="bold" />
        <!--  Name Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColor"
            android:text="@string/change_password_user" />
		<!--  Name TextField -->
        <EditText
            android:id="@+id/changePasswordUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
		<!--  Old password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColor"
            android:text="@string/change_password_old_password" />
		<!--  Old password TextField -->
        <EditText
            android:id="@+id/changePasswordOldPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"/>
        
		<!--  New Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColor"
            android:text="@string/change_password_new_password1" />
		<!--  New Password TextField -->
        <EditText
            android:id="@+id/changePasswordNewPassword1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"/>

        <!--  New Password 2 Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColor"
            android:text="@string/change_password_new_password2" />
        <!--  New Password 2 TextField -->
        <EditText
            android:id="@+id/changePasswordNewPassword2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"/>

        <!--  message -->
        <TextView android:id="@+id/changePasswordMessage"
            	  android:layout_width="fill_parent"
            	  android:layout_height="wrap_content"
            	  android:textColor="@color/errorColor"
            	  android:padding="10dip"
            	  android:textStyle="bold"/>

		<!--  Login Button -->        
        <Button
            android:id="@+id/changePasswordBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/change_password_register_button" />

        <!--  Link to Login Screen -->
        <Button
            android:id="@+id/changePasswordBtnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@null"
            android:textColor="@color/button2Color"
            android:text="@string/change_password_back_button" />
    </LinearLayout>

</ScrollView>