<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip">
		<!--  View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/loginWelcome"
            android:textSize="25dip"
            android:textStyle="bold" />
		<!--  User Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColor"
            android:text="@string/user" />
		<!--  User TextField -->
        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
		<!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:textColor="@color/fontColor"
            android:text="@string/password" />
		<!--  Password TextField -->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true" />
        
        <!--  Error message -->
        <TextView android:id="@+id/login_error"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:textColor="#e30000"
            		android:padding="10dip"
            		android:textStyle="bold"/>

		<!--  Login Button -->        
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/action_sign_in" />

        <!--  Link to Change Password -->
         <Button
            android:id="@+id/btnLinkToChangePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@null"
            android:textColor="@color/button2Color"
            android:text="@string/action_change_password"/>
    </LinearLayout>

</ScrollView>